kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wavesight
  labels:
    name: wavesight
