kubernetes/web-deployment-updated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wavesight-web
  namespace: wavesight
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wavesight-web
  template:
    metadata:
      labels:
        app: wavesight-web
    spec:
      containers:
      - name: web
        image: wavesight/wavesight-web:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: wavesight-web-service
  namespace: wavesight
spec:
  selector:
    app: wavesight-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
